[gd_scene load_steps=10 format=3 uid="uid://bgpu1sil353c7"]

[ext_resource type="Script" uid="uid://18l2vrmp1sxq" path="res://src/entity/level_end.gd" id="1_qovhv"]
[ext_resource type="Material" uid="uid://hn1cpq4c1txh" path="res://material/crate.tres" id="2_4gg5d"]
[ext_resource type="Material" uid="uid://djs0htkjng54b" path="res://material/white.tres" id="3_npi43"]

[sub_resource type="PlaneMesh" id="PlaneMesh_p0e3o"]
size = Vector2(2.625, 4.09)

[sub_resource type="Animation" id="Animation_70o1x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CSGCombiner3D/CSGBox3D5:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-2.65527, -0.407959, -0.000610352)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CSGCombiner3D/CSGBox3D4:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.34734, -0.407959, -0.000610352)]
}

[sub_resource type="Animation" id="Animation_nkhur"]
resource_name = "open"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CSGCombiner3D/CSGBox3D4:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(0.25, 0.25),
"update": 0,
"values": [Vector3(-1.34734, -0.407959, -0.000610352), Vector3(0.0599872, -0.407959, -0.000610352)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CSGCombiner3D/CSGBox3D5:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(0.25, 0.25),
"update": 0,
"values": [Vector3(-2.65527, -0.407959, -0.000610352), Vector3(-4.08205, -0.407959, -0.000610352)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gjlyy"]
_data = {
&"RESET": SubResource("Animation_70o1x"),
&"open": SubResource("Animation_nkhur")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_t5fja"]
size = Vector3(1, 2.5918, 0.233398)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_5lg1d"]
radius = 8.0

[node name="LevelEnd" type="Area3D"]
script = ExtResource("1_qovhv")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1.5, 0)
use_collision = true
collision_layer = 7
collision_mask = 7

[node name="CSGBox3D" type="CSGBox3D" parent="CSGCombiner3D"]
size = Vector3(1.5, 5, 1.5)
material = ExtResource("2_4gg5d")

[node name="CSGBox3D4" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.34734, -0.407959, -0.000610352)
size = Vector3(1.30908, 4.18408, 0.87085)
material = ExtResource("2_4gg5d")

[node name="CSGBox3D5" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.65527, -0.407959, -0.000610352)
size = Vector3(1.30908, 4.18408, 0.87085)
material = ExtResource("2_4gg5d")

[node name="CSGBox3D2" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0.015625)
size = Vector3(1.5, 5, 1.53125)
material = ExtResource("2_4gg5d")

[node name="CSGBox3D3" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.98297, 2.44014, -0.0544053)
size = Vector3(6.03406, 1.9093, 1.72998)
material = ExtResource("2_4gg5d")

[node name="CSGBox3D6" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.00527, -0.49052, 0.743277)
size = Vector3(2.51164, 3.9986, 0.0802001)
material = ExtResource("2_4gg5d")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.04408, 0.496514)
material_override = ExtResource("3_npi43")
mesh = SubResource("PlaneMesh_p0e3o")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_gjlyy")
}

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.795898, 0.309099)
shape = SubResource("BoxShape3D_t5fja")

[node name="Opener" type="Area3D" parent="."]

[node name="Hitbox" type="CollisionShape3D" parent="Opener"]
shape = SubResource("CylinderShape3D_5lg1d")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.392241, 0.919863, 0, -0.919863, 0.392241, 0, 4.08255, -1.20295)
light_energy = 5.0
spot_range = 12.9653

[connection signal="body_entered" from="." to="." method="body_entered"]
[connection signal="body_entered" from="Opener" to="." method="opener_body_entered"]
